<resources>
    <string name="app_name">LucasVanBerkel-pset5</string>
    <string name="nameBanner">To-Do-List!</string>
    <string name="hulpBanner">Hold item to remove</string>
    <string name="editText">Add a new to-do item</string>
    <string name="buttonText">Add</string>
    <string name="nameBannerList">Your lists:</string>
    <string name="hulpBannerList">Tap to view</string>
    <string name="buttonTextList">Add new list</string>
    <string name="editTextList">Add a new list</string>
    <string name="cancelText">Cancel</string>
</resources>
