<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucas.lucasvanberkel_pset5.toDoList">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/nameBannerList"
        android:layout_centerHorizontal="true"
        android:id="@+id/nameBanner"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/hulpBannerList"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nameBanner"
        android:id="@+id/hulpBanner"
        android:gravity="center"
        android:layout_margin="8dp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hulpBanner"
        android:id="@+id/listview1"
        android:layout_above="@+id/bottom">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/buttonTextList"
            android:id="@+id/addButton"
            android:layout_gravity="end"/>

    </LinearLayout>
</RelativeLayout>
